' -*- mode: plantuml; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*-
'
' Copyright (C) 2026 Marco Craveiro <marco.craveiro@gmail.com>
'
' This program is free software; you can redistribute it and/or modify it under
' the terms of the GNU General Public License as published by the Free Software
' Foundation; either version 3 of the License, or (at your option) any later
' version.
'
' This program is distributed in the hope that it will be useful, but WITHOUT
' ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
' FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License along with
' this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
' Street, Fifth Floor, Boston, MA 02110-1301, USA.
'
@startuml

title ores.shell.compute Component

set namespaceSeparator ::

namespace ores #F2F2F2 {
    namespace shell #F2F2F2 {
        namespace app #F2F2F2 {
            namespace commands #F2F2F2 {
                namespace compute #F2F2F2 {
                    class app_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class app_version_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class app_version_platform_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class batch_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class host_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class platform_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class result_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                    class workunit_commands {
                        {static} +register_commands(root_menu : cli::Menu&, session : nats_client&)
                    }
                }
            }
        }
    }
}

' --- manual: everything below this line is hand-authored; the script preserves it ---

app_commands ..> ores.compute.api : app protocol
app_version_commands ..> ores.compute.api : app version protocol
app_version_platform_commands ..> ores.compute.api : junction protocol
batch_commands ..> ores.compute.api : batch protocol
host_commands ..> ores.compute.api : host protocol
platform_commands ..> ores.compute.api : platform protocol
result_commands ..> ores.compute.api : result protocol
workunit_commands ..> ores.compute.api : workunit protocol

ores.shell.api ..> ores.shell.compute : menu, request helpers

' Local Variables:
' compile-command: "java -Djava.awt.headless=true -DPLANTUML_SECURITY_PROFILE=UNSECURE -DPLANTUML_LIMIT_SIZE=65535 -jar /usr/share/plantuml/plantuml.jar ores.shell.compute.puml"
' End:
@enduml
